<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15A278b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Dress_Me" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p5K-vZ-9F2">
                                <rect key="frame" x="278" y="173" width="45" height="30"/>
                                <animations/>
                                <state key="normal" title="Name:"/>
                                <connections>
                                    <action selector="nameTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="79r-Eq-P1B"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lfw-Zq-nxu">
                                <rect key="frame" x="172" y="240" width="31" height="30"/>
                                <animations/>
                                <state key="normal" title="Age:"/>
                                <connections>
                                    <action selector="ageTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BYk-rc-Jzb"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fbs-tp-COV">
                                <rect key="frame" x="128" y="328" width="63" height="30"/>
                                <animations/>
                                <state key="normal" title="Location:"/>
                                <connections>
                                    <action selector="locationTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EP5-i4-H6e"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oas-Qp-ISJ">
                                <rect key="frame" x="47" y="444" width="144" height="30"/>
                                <animations/>
                                <state key="normal" title="Get Current Location"/>
                                <connections>
                                    <action selector="findMyLocation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hIv-bU-s2a"/>
                                </connections>
                            </button>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="f2G-U9-HM1">
                                <rect key="frame" x="32" y="28" width="240" height="128"/>
                                <animations/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GRm-32-sbu">
                                <rect key="frame" x="20" y="179" width="150" height="30"/>
                                <animations/>
                                <state key="normal" title="Upload Profile Picture"/>
                                <connections>
                                    <action selector="loadImageButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QjN-r1-gTN"/>
                                </connections>
                            </button>
                        </subviews>
                        <animations/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                    </view>
                    <connections>
                        <outlet property="imageView" destination="f2G-U9-HM1" id="evP-eU-e6Y"/>
                    </connections>
                </viewController>
            </objects>
            <point key="canvasLocation" x="305" y="415"/>
        </scene>
    </scenes>
</document>
