...
    
    let locationManager = CLLocationManager()

    @IBAction func nameTapped(sender: AnyObject) {
        let alertController = UIAlertController(title: "Name", message:"We need your name to create a profile!", preferredStyle:UIAlertControllerStyle.Alert)
        
        alertController.addAction(UIAlertAction(title: "Dismiss", style: UIAlertActionStyle.Default,handler: nil))
        self.presentViewController(alertController, animated: true, completion: nil)
    }
    
    @IBAction func ageTapped(sender: AnyObject) {
        let alertController = UIAlertController(title: "Age", message:"We need your age to create a profile!", preferredStyle:UIAlertControllerStyle.Alert)
        
...
